--- a/frappe/templates/emails/header_template.html
+++ b/frappe/templates/emails/header_template.html
@@ -2,9 +2,9 @@
 <tr>
     <td style="width:20px;"></td>
     <td style="vertical-align: top">
-        <table width="100%" border="0" cellpadding="0" cellspacing="0">
+        <table class="header" width="100%" border="0" cellpadding="0" cellspacing="0">
             <tr>
-                <td class="h-spacer-lg">
+                <td width="50">
                     <img src="https://raw.githubusercontent.com/ashwinisave35/erpnext/email-logo/erp-logo.jpg" width="40" style="display: block;" alt="ERPNext">
                 </td>
                 <td>
