--- a/frappe/templates/emails/base_email.html
+++ b/frappe/templates/emails/base_email.html
@@ -165,13 +165,13 @@ table.wrapper {
 <center>
     <table class="wrapper" align="center" width="100%" border="0" cellpadding="0" cellspacing="0">
         <tr>
-            <td class="h-spacer-sm"></td>
+            <td class="h-spacer"></td>
         </tr>
         <tr>
             <td>
                 <table class="inner" width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td colspan="3" class="h-spacer"></td>
+                        <td colspan="3" class="h-spacer-sm"></td>
                     </tr>
                     {% include 'frappe/templates/emails/header_template.html' %}
 
