--- a/frappe/desk/page/setup_wizard/setup_wizard.css
+++ b/frappe/desk/page/setup_wizard/setup_wizard.css
@@ -114,10 +114,8 @@
 }
 
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] {
-	/*hardcoded measures*/
 	width: 140px;
-	/*to change as per removing heading*/
-	height: 180px;
+	height: 180px; /*depends on presence of heading*/
 	text-align: center;
 	margin-left: 33%;
 }
