--- a/frappe/public/less/list.less
+++ b/frappe/public/less/list.less
@@ -439,6 +439,49 @@
 	background-color: #fff !important;
 }
 
+// Goals
+
+.goals-view-container {
+	.frequency-section {
+		background-color: #fafbfc;
+		border-bottom: 1px solid #d1d8dd;
+		height: 150px;
+		padding: 15px;
+
+		.frequency-title {
+			font-size: 16px;
+			color: #8D99A6;
+		}
+	}
+
+	.goal-list {
+		display: flex;
+	}
+
+	.goal-container {
+		background-color: #fff;
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+		border-radius: 2px;
+		padding: 10px;
+		margin-top: 10px;
+		width: 250px;
+		height: 85px;
+
+		.goal-graphics {
+			.inline-graph-count {
+				font-size: 20px;
+				padding: 0px 10px;
+			}
+			.inline-graph-bar {
+				top: 32px;
+			}
+			.inline-graph-half {
+				height: 45px;
+			}
+		}
+	}
+}
+
 // gantt
 .gantt {
 	.details-container {
