--- a/frappe/public/js/frappe/form/templates/form_dashboard.html
+++ b/frappe/public/js/frappe/form/templates/form_dashboard.html
@@ -1,6 +1,4 @@
-<div class="form-dashboard hidden">
-	<h4 class="form-headline hidden form-dashboard-section">
-	</h4>
+<div class="form-dashboard-wrapper">
 	<div class="progress-area hidden form-dashboard-section">
 	</div>
 	<div class="form-heatmap hidden form-dashboard-section">
