--- a/frappe/public/js/frappe/form/templates/form_links.html
+++ b/frappe/public/js/frappe/form/templates/form_links.html
@@ -1,9 +1,8 @@
 <div class="form-documents">
-	<h5 style="margin: 5px 0px;">{{__("Related Documents")}}</h5>
 	{% for (var i=0; i < transactions.length; i++) { %}
 		{% if((i % 2)===0) { %}<div class="row">{% } %}
 		<div class="col-xs-6">
-			<h6 class="uppercase">{{ transactions[i].label }}</h5>
+			<h6>{{ transactions[i].label }}</h6>
 			{% for (var j=0; j < transactions[i].items.length; j++) {
 				var doctype = transactions[i].items[j]; %}
 			<div class="document-link"
