--- a/frappe/desk/page/setup_wizard/setup_wizard.css
+++ b/frappe/desk/page/setup_wizard/setup_wizard.css
@@ -1,3 +1,22 @@
+.setup-wizard-brand {
+	margin: 40px;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center
+}
+
+.setup-wizard-brand .brand-icon {
+	width: 36px;
+	height: 36px;
+}
+
+.setup-wizard-brand .brand-name {
+	font-size: 20px;
+	margin-left: 8px;
+	color: #36414C;
+}
+
 .setup-wizard-slide {
 	padding-left: 0px;
 	padding-right: 0px;
@@ -14,22 +33,67 @@
 }
 
 .setup-wizard-slide .lead {
-	margin-bottom: 10px;
+	margin: 40px;
+	color: #777777;
+	text-align: center;
+	font-size: 30px;
+}
+
+.setup-wizard-slide .col-sm-12 {
+	padding: 0px;
+}
+
+.setup-wizard-slide .section-body .col-sm-6:first-child {
+	padding-left: 0px;
+}
+
+.setup-wizard-slide .section-body .col-sm-6:last-child {
+	padding-right: 0px;
+}
+
+.setup-wizard-slide .form-control {
+	height: 35px;
 	font-weight: 500;
+}
+
+.setup-wizard-slide .has-error .control-label {
+	color: #ffa00a;
+}
+
+.setup-wizard-slide .has-error .form-control{
+	border-color: #ffa00a;
+}
+
+.setup-wizard-slide .form-control.bold {
+	background-color: #fff;
 }
 
 .setup-wizard-slide.with-form {
 	margin: 40px auto;
+	padding: 10px 50px;
 	border: 1px solid #d1d8dd;
 	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .setup-wizard-slide .footer {
-	padding: 30px;
+	padding: 30px 0px;
+}
+
+.setup-wizard-slide a.next-btn,
+.setup-wizard-slide a.complete-btn {
+	font-size: 14px;
+	padding: 7px 25px;
+}
+
+.setup-wizard-slide a.next-btn.disabled,
+.setup-wizard-slide a.complete-btn.disabled {
+	background-color: #b1bdca;
+	color: #fff;
+	border-color: #b1bdca;
 }
 
 .setup-wizard-progress {
-    padding: 15px;
+	padding: 15px;
 }
 
 .setup-wizard-slide .fa-fw {
@@ -50,16 +114,28 @@
 }
 
 .setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] {
+	width: 140px;
+	height: 180px; /*depends on presence of heading*/
 	text-align: center;
+	margin-left: 33%;
+}
+
+.setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .form-group,
+.setup-wizard-slide .frappe-control[data-fieldtype="Attach Image"] .clearfix {
+	display: none;
 }
 
 .setup-wizard-slide .missing-image,
 .setup-wizard-slide .attach-image-display {
 	display: block;
 	position: relative;
-	left: 50%;
-	transform: translate(-50%, 0);
-	-webkit-transform: translate(-50%, 0);
+	border-radius: 4px;
+}
+
+.setup-wizard-slide .missing-image {
+	border: 1px solid #d1d8dd;
+	border-radius: 6px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 }
 
 .setup-wizard-slide .missing-image .octicon {
@@ -68,6 +144,38 @@
 	transform: translate(0px, -50%);
 	-webkit-transform: translate(0px, -50%);
 }
+
+
+.setup-wizard-slide .img-container {
+	height: 100%;
+	width: 100%;
+	padding: 2px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	border: 1px solid #d1d8dd;
+	border-radius: 6px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+}
+
+.setup-wizard-slide .img-overlay {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	color: #777777;
+	background-color: rgba(255, 255, 255, 0.7);
+	opacity: 0;
+}
+
+.setup-wizard-slide .img-overlay:hover {
+	opacity: 1;
+	cursor: pointer;
+}
+
 
 .setup-wizard-message-image {
 	margin: 15px auto;
