--- a/frappe/templates/includes/breadcrumbs.html
+++ b/frappe/templates/includes/breadcrumbs.html
@@ -1,7 +1,11 @@
 {% if parents and parents|length > 0 %}
 <ul class="breadcrumb" itemscope itemtype="http://data-vocabulary.org/Breadcrumb">
 	{% for parent in parents %}
-		<li><a href="{{ parent.route | abs_url }}" itemprop="url"><span itemprop="title">{{ parent.name or parent.label or "" }}</span></a></li>
+		<li>
+			<a href="{{ url_prefix }}{{ parent.route | abs_url }}" itemprop="url">
+			<span itemprop="title">{{ parent.title or parent.label or parent.name or "" }}</span>
+			</a>
+		</li>
 	{% endfor %}
 	<li class="active"><span itemprop="title">{{ title or "" }}</span></li>
 </ul>
