--- a/frappe/templates/emails/standard.html
+++ b/frappe/templates/emails/standard.html
@@ -1,28 +1,65 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta name="viewport" content="width=device-width" />
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>{{ subject or "" }}</title>
+	<meta name="viewport" content="width=device-width" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>{{ subject or "" }}</title>
 </head>
+
 <body style="line-height: 1.5; color: #36414C;">
-<!-- body -->
-<div style="font-family: -apple-system, BlinkMacSystemFont,
-	    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-	    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-		font-size: 14px; padding: 10px;">
-    {{ content }}
-	{{ signature }}
-</div>
-
-<!-- footer -->
-<div style="margin-top: 30px; font-family: Helvetica, Arial, sans-serif; font-size: 11px;
-    margin-bottom: 15px; border-top: 1px solid #d1d8dd;"
-	data-email-footer="true">
-	{{ footer }}
-</div>
-<!-- /footer -->
-
-<div class="print-html">{{ print_html or "" }}</div>
+	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="body_table" style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif; font-size: 14px;">
+		<tr>
+			<td align="center" valign="top">
+				<table border="0" cellpadding="0" cellspacing="0" width="600" id="email_container">
+					<tr>
+						<td valign="top">
+							<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_header">
+								<tr>
+									<td width="35" height="50" style="border-bottom: 1px solid #d1d8dd;">
+										<img embed="erp-logo.jpg" width="24" height="24" style="display: block;"
+										 alt="ERPNext">
+									</td>
+									<td style="border-bottom: 1px solid #d1d8dd;">
+										<p>ERPNext</p>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td valign="top">
+							<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_body">
+								<tr>
+									<td valign="top">
+										<p>{{ content }}</p>
+										<p>{{ signature }}</p>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+					<tr>
+						<td valign="top">
+							<table border="0" cellpadding="0" cellspacing="0" width="100%" id="email_footer">
+								<tr>
+									<td valign="top" style="font-family: Helvetica, Arial, sans-serif; font-size: 11px;
+    margin-bottom: 15px; border-top: 1px solid #d1d8dd;" data-email-footer="true">
+										{{ footer }}
+									</td>
+								</tr>
+								<tr>
+									<td valign="top">
+										<div class="print-html">{{ print_html or "" }}</div>
+									</td>
+								</tr>
+							</table>
+						</td>
+					</tr>
+				</table>
+			</td>
+		</tr>
+	</table>
 </body>
+
 </html>
